Fix padding in Login component and update navigation in CreateProject component

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -32,7 +32,7 @@
         font-size: var(--fs-small);
         border: 1px solid var(--primary-color);
         margin-bottom: 20px;
-        padding-right: 40px;
+        // padding-right: 40px;
 
         &:focus{
           outline: none;
