--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -52,21 +52,71 @@
     width: 100%;
 
     .singleProjectContent{
-        display: flex;
+        display: flex;margin-top: 10px;
         flex-direction: column;
         align-items: start;
         gap: 10px;
         width: 50%;
 
+        h1{
+            font-size: var(--fs-xlarge);
+        }
+
         h1, p{
+            padding-bottom: 5px;
             color: var(--dark-color3);
-            width: 80%;
+            width: 90%;
             display: flex;
             justify-content: space-between;
             border-bottom: 1px solid var(--teritary-color);
+            margin-left: 20px;
         }
         p span{
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
             color: var(--fade-dark-color);
+            font-size: var(--fs-small);
+            margin-left: 20px;
+            
+            .btn-button{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-left: 10px;
+                
+                svg{
+                    width: 15px;
+                    margin-right: 0px;
+                }
+            }
+
+            .upvote{
+                color: var(--success-color3);
+                border-color: var(--success-color3);
+                &:hover{
+                    color: var(--light-color);
+                    background-color: var(--success-color3);
+                }
+            }
+            .downvote{
+                color: var(--danger-color);
+                border-color: var(--danger-color);
+                &:hover{
+                    color: var(--light-color);
+                    background-color: var(--danger-color);
+                }
+            }
+            .upvote-filled{
+                color: var(--light-color);
+                background-color: var(--success-color3);
+                border-color: var(--success-color3);
+            }
+            .downvote-filled{
+                color: var(--light-color);
+                background-color: var(--danger-color);
+                border-color: var(--danger-color);
+            }
         }
     }
 
@@ -76,12 +126,23 @@
         align-items: start;
         gap: 10px;
         width: 50%;
+        margin-top: 10px;
+        h1{
+            font-size: var(--fs-xlarge);
+        }
+        .p-spanalytics{
+            width: 90%;
+            display: flex;
+            justify-content: space-between;
+        }
 
         .chart{
             width: 100%;
             height: 300px;
             padding: 10px;
-            background-color: aliceblue;
+            background-color: var(--border-color);
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(31, 38, 135, 0.5);
         }
     }
 }
