--- a/src/components/BugZone/BugZone.scss
+++ b/src/components/BugZone/BugZone.scss
@@ -218,12 +218,148 @@
 
     .commonEditDetailsItem .save{
         background-color: var(--success-color2);
+        color: var(--light-color);
     }
     .commonEditDetailsItem .delete{
+        color: var(--light-color);
         background-color: var(--danger-color);
     }
 }
 
 .dark-theme .bugzone-content .viewBug .public-bugs .bug-footer .bug-tags .bug-votes{
     color: var(--fade-light-color);
+}
+
+.viewSingleBugzone{
+    display: flex;
+    flex-direction: column;
+
+    .singleProjectDetails,
+    .singleProjectDetails .singleProjectContent{
+        width: 100%;
+    }
+
+    .commentsForIssue{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 1rem;
+        h1{
+            font-size: var(--fs-xlarge);
+        }
+
+        .commentForIssue{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            margin-top: 1rem;
+            border: 1px solid var(--neon-color);
+            width: 100%;
+            border-radius: 5px;
+            box-shadow: 0 4px 15px 0 rgba(31, 38, 135, 0.37);
+            -webkit-backdrop-filter: blur(2px);
+            backdrop-filter: blur(3px);
+            
+            .commentHeader{
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                font-size: var(--fs-normal);
+                text-transform: capitalize;
+                margin-bottom: 1rem;
+            }
+            .commentBody{
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                font-size: var(--fs-normal);
+                color: var(--teritary-color);
+                margin-bottom: 1rem;
+                
+            }
+            .commentFooter{
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                font-size: var(--fs-normal);
+                .commentLinks{
+                    span{
+                        button{
+                            margin-right:10px;
+                        }
+                        .cancel{
+                            border-color: var(--danger-color);
+                            color: var(--danger-color);
+                            &:hover{
+                                color: var(--light-color);
+                                background-color: var(--danger-color);
+                            }
+                        }
+                    }
+                    svg{
+                        display: flex;
+                        margin-right: 0px;
+                    }
+                }
+                .commentAck{
+                    color: var(--teritary-color);
+                }
+            }
+            span{
+                font-size: var(--fs-xsmall);
+                color: var(--fade-dark-color3);
+            }
+        }
+    
+    }
+}
+
+.dark-theme .singleProjectDetails .formBodyIssue {
+    background: transparent;
+    border: 1px solid var(--info-color);
+  }
+.singleProjectDetails .formBodyIssue {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    padding: 10px 20px;
+    width: 50%;
+    border-radius: 5px;
+    transition: all 0.4s ease-in-out;
+    border: 1px solid var(--border-color);
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(4px);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    
+    .form-group{
+        display: flex;
+        justify-content: center;
+    }
+    .addComment{
+        width: 100%;
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+        padding: 5px 10px;
+        textarea{
+            padding: 5px 10px;
+            min-height: 120px;
+            width: 100%;
+            max-width: 478px;
+            min-width: 478px;
+        }
+    }
+    label{
+        margin-right:10px;
+        cursor: pointer;
+        svg{
+            display: flex;
+            margin-right: 0px;
+        }
+    }
 }
